--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -3,12 +3,31 @@
     list-style: none;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+    
   }
 
   body {
     margin: 0;
     line-height: 1.4;
+    font-family: 'Roboto', sans-serif;
+
+    h1{
+      font-size: 32px;
+      font-weight: 700;
+    }
+    
+    h2{
+      font-size: 24px;
+      font-weight: 600;
+    }
+    
+    h3{
+      font-size: 18.72px;
+      font-weight: 500;
+    }
   }
 
   a{
