--- a/src/scss/modules/Footer/_footer.scss
+++ b/src/scss/modules/Footer/_footer.scss
@@ -3,8 +3,7 @@
     position: absolute;
     width: 100%;
     bottom: 0;
-    height: 350px;
-    margin: 0 10%;
+    height: 300px;
 
     justify-content: center;
 
@@ -15,62 +14,120 @@
     .left{
         display: block;
         float: left;
-        width: 49%;
+        width: 46%;
         height: 200px;
       }
 
     .right{
         display: block;
         float: right;
-        width: 50%;
+        width: 46%;
         height: 200px;
       }
 
-
-
-    &__contact {
-        color: #999;
-        height: 200px;
-    }
+      &__listwrap{
+          display: table;
+      }
 
     &__list {
-        position: relative;
-        height: 70%;
         font-size: 12px;
         color: #999;
+        margin: 1em 2%;
+        margin-bottom: 10px;
+        height: 200px;
+        display: table-cell;
         
 
         & h3{
             text-align: left;
-            margin-bottom: 40px;
+            margin: 20px 0;
             color: #000
 
         }
+
+        & > ul > img {
+            margin-bottom: 15px;
+        }
         
         & > ul > li{
-            margin-bottom: 15px;
+            margin: 15px 0;
+            font-size: 140%;
         }
     }
 
     &__icon {
         position: relative;
         color: #999;
-        display: flex;
-        width: 100%;
         justify-content: center;
-        
+        border-top: 1px solid;
+        bottom: 0;
+        left: 0;
+        width: 100%;
 
-        > div {
-            border-top: 1px solid;
-            align-self: center;
+        & > div {
+            width: 100%;
+            text-align: center;
         }
 
+        & div > ul {
+            padding: 0 5em;
+        }
+        
         ul > li {
-            display: inline-block;
+            display: inline;
         }
 
         a{
             color: #999;
         }
     }
+    
+
+    .down{
+        width: 100%;
+        display: flex;
+    } 
 }
+
+
+@media screen and (min-width: 800px){
+    .footer{
+
+        &__list {
+        padding: 0 4em;
+        }
+
+        .left{
+            display: block;
+            width: auto;
+            height: 200px;
+        }
+
+        .right{
+            display: block;
+            width: auto;
+            height: 200px;
+        }
+
+        .nonephone{
+            display: flex;
+        }
+    
+        .nonedesk{
+            display: none;
+        }
+    
+        .up{
+            position: relative;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            margin-bottom: 70px;
+        }
+    
+        .down{
+            width: 100%;
+            display: flex;
+        } 
+    }
+  }
