--- a/src/scss/modules/_menu.scss
+++ b/src/scss/modules/_menu.scss
@@ -13,6 +13,7 @@
       
       
       &--toggler{
+        z-index: 10;
         cursor: pointer;
         opacity: 1;
         padding: 0; 
@@ -22,6 +23,7 @@
       }
 
       &--hamburger{
+        pointer-events: none;
         padding: 0;
         margin-left: -25px;
         margin-top: 10px;
@@ -91,12 +93,11 @@
       /*  positionning  */
       &--menu{
         position: fixed;
-        top: 90px;
+        top: 80px;
         left: 0;
         width: 100%;
         height: 100%;
         margin: auto;
-        visibility: hidden;
         overflow: hidden;
         display: flex;
         align-items: center;  
@@ -117,13 +118,13 @@
           transition: all 0.4s ease;
   
           & > div {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             text-align: left;
-            max-width: 90vw;
-            max-height: 80vw;
-            margin-bottom: 180px;
             opacity: 0;
             transition: opacity 0.4s ease;
-            margin-left: 30px;
 
             
             h1 {
