--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,8 +8,17 @@
   vertical-align: baseline;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 html p {
   color: #999;
+}
+
+main {
+  min-height: 100%;
 }
 
 body {
@@ -18,7 +27,7 @@ body {
   font-family: "Roboto", sans-serif;
 }
 body h1 {
-  font-size: 32px;
+  font-size: 58px;
   font-weight: 700;
 }
 body h2 {
@@ -38,7 +47,7 @@ a {
   display: flex;
   flex-flow: row wrap;
   align-items: center;
-  background: #eeeeee;
+  background: #F2EDE9;
   color: #000;
   padding: 0 1rem;
   height: 80px;
@@ -142,12 +151,14 @@ a {
   padding: 0;
   width: 60px;
   height: 60px;
+  z-index: 21;
 }
 .header__icon--menuwrap--hamburger {
   pointer-events: none;
   padding: 0;
   margin-left: -25px;
   margin-top: 10px;
+  z-index: 20;
 }
 .header__icon--menuwrap--hamburger > div {
   position: relative;
@@ -168,6 +179,11 @@ a {
   width: 100%;
   height: 2px;
   background: inherit;
+}
+.header__icon--menuwrap--toggler:checked {
+  position: fixed;
+  top: 17;
+  right: 45px;
 }
 .header__icon--menuwrap--hamburger > div::after {
   top: 9px;
@@ -195,7 +211,7 @@ a {
 }
 .header__icon--menuwrap--menu {
   position: fixed;
-  top: 80px;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
@@ -244,7 +260,7 @@ a {
 
 .footer {
   z-index: 1;
-  position: absolute;
+  position: inherit;
   width: 100%;
   bottom: 0;
   height: 300px;
@@ -352,19 +368,105 @@ a {
   position: relative;
   width: 100%;
 }
+.main a {
+  text-decoration: underline;
+}
 .main__banner {
   position: relative;
-  width: 100%;
-  background-color: #eeeeee;
+  width: 85%;
+  background-color: #F2EDE9;
+  margin: auto;
 }
 .main__banner__bottom--container {
   background-image: url(../homepage/resources/deals_image.jpg);
   background-size: cover;
   background-position: center;
-  border: 1px solid red;
   position: relative;
   text-align: left;
-  height: 400px;
+  height: 450px;
+}
+.main__banner__bottom--container--wrapper {
+  width: 350px;
+  margin: auto;
+  width: 90%;
+}
+.main__banner__bottom--container--wrapper > a {
+  position: absolute;
+  bottom: 12%;
+}
+.main__banner__top--container {
+  background-image: url(../homepage/resources/abc.jpg);
+  background-size: 500%;
+  background-position-x: -80px;
+  background-position-y: center;
+  background-repeat: no-repeat;
+  background-color: #F2EDE9;
+  position: relative;
+  text-align: left;
+  height: 100vh;
+}
+.main__banner__top--container .icon {
+  position: absolute;
+  margin: auto;
+  height: 80px;
+  bottom: 0;
+  border-top: 1px solid #e6e6e6;
+  width: 100%;
+  text-align: center;
+}
+.main__banner__top--container .icon ul > li {
+  display: inline;
+  margin: 0 10px;
+}
+.main__banner__top--container .icon a {
+  color: #999;
+}
+.main__banner__top--container--wrapper {
+  margin-left: 5%;
+  padding: 37vh 0;
+}
+.main__banner__top--container--wrapper > p {
+  color: #f3beb5;
+  font-size: 130%;
+}
+
+.counter {
+  position: relative;
+  background-color: #ffffff;
+  max-width: 350px;
+  height: 110px;
+}
+.counter img {
+  width: 70%;
+  height: auto;
+}
+
+.save50 {
+  background-color: #f68773;
+  border-radius: 5px;
+  font-size: 80%;
+  width: 70px;
+  padding: 2px 4px;
+  color: #fff;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 800px) {
+  .main__banner {
+    width: 100%;
+  }
+  .main__banner__bottom--container--wrapper {
+    margin-left: 20%;
+  }
+  .main__banner__top--container {
+    background-size: cover;
+  }
+
+  .counter {
+    margin: 0;
+  }
 }
 @media screen and (max-width: 800px) {
   .header {
@@ -376,7 +478,7 @@ a {
 }
 @media screen and (min-width: 800px) {
   .header__icon--menuwrap {
-    background-color: #eeeeee;
+    background-color: #F2EDE9;
     display: none;
   }
 }
