--- a/src/scss/modules/Footer/_footer.scss
+++ b/src/scss/modules/Footer/_footer.scss
@@ -1,10 +1,9 @@
 .footer{
     z-index: 1;
-    position: absolute;
+    position: inherit;
     width: 100%;
     bottom: 0;
     height: 300px;
-
     justify-content: center;
 
     .nonephone{
