--- a/src/scss/modules/_menu.scss
+++ b/src/scss/modules/_menu.scss
@@ -19,6 +19,7 @@
         padding: 0; 
         width: 60px;
         height: 60px;
+        z-index: 21;
         
       }
 
@@ -27,6 +28,7 @@
         padding: 0;
         margin-left: -25px;
         margin-top: 10px;
+        z-index: 20;
       }
 
       /* Hamburger Line */
@@ -52,6 +54,12 @@
         width: 100%;
         height: 2px;
         background: inherit;
+      }
+
+      &--toggler:checked{
+        position: fixed;
+        top: 17;
+        right: 45px;
       }
 
           /* Moves Line Down */
@@ -93,7 +101,7 @@
       /*  positionning  */
       &--menu{
         position: fixed;
-        top: 80px;
+        top: 0;
         left: 0;
         width: 100%;
         height: 100%;
